--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Backend Challenges | Free Code Camp</title>
+      <title>Who am I | Backend Challenges | Free Code Camp</title>
       <link rel="shortcut icon" href="https://cdn4.iconfinder.com/data/icons/marketing-32/512/GEO_target-20.png" type="image/x-icon"/>
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
       <link href="/public/style.css" rel="stylesheet" type="text/css">
@@ -9,7 +9,7 @@
 
    <body>
       <div class="container">
-        <h1>Example headers parsing</h1>
+        <h1><a href="/api/whoami/">Who am I?</a></h1>
       </div>
    </body>
 </html>
